--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "description": "Similar to the xunit-file reporter. Allows you to specify any report style to run, but will also write to the specified xunit file",
   "version": "0.0.1",
   "author": "Anthony Pipkin <a.pipkin@yahoo.com>",
+  "bugs": {
+    "url": "https://github.com/apipkin/reporter-file/issues"
+  },
+  "homepage": "https://github.com/apipkin/reporter-file",
   "keywords": [
     "mocha",
     "file",
     "reporter"
   ],
   "dependencies": {
-    "mocha": "~1.17.0",
-    "js2xmlparser": "~0.1.2"
+    "intercept-stdout": "0.0.3",
+    "mocha": "~1.17.0"
   },
   "main": "lib/reporter-file.js",
   "license": "WTFPL",
   "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apipkin/reporter-file.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
